# ForkWise

./: .gitignore  README.md  pyproject.toml
src/forkwise/: __init__.py  config.yml  schema.sql
tests/fixtures/: test_config.yml
