[project]
name = "forkwise"
version = "0.1.0"
description = "Nutrition tracking app"
readme = "README.md"
authors = [
    { name = "Stephanie Johnson", email = "johnson.stephanie076@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
]

[project.scripts]
forkwise = "forkwise:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
